welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: not found: value vert
  return vert
         ^