welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (estFaceMur) {
    return false
  } else if (getCouleurSol() == Color.green) {
    return true 
  }
	
  return vert
  }